# books-rag

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: index.md
examples/: router.py
src/: data_service.py  llm_service.py  main.py  observability.py  pheonix.ipynb  query_engine.py
src/books_rag/: __init__.py
src/engines/: chat.py  query.py  router.py  sub_query.py
src/libs/: logger.py  pheonix.py
